<resources>
    <string name="app_name">TicTackToe</string>

    <!-- Fragment, start -->
    <string name="fragment_start_text_button">Start Game!</string>
    <string name="fragment_start_text_player1">Player 1:</string>
    <string name="fragment_start_text_player2">Player 2:</string>
    <string name="fragment_start_text_select_players">Select Players:</string>
    <string name="fragment_start_text_select_dimension">Select Dimension:</string>
    <string name="unloaded">Unloaded</string>
    <string name="same_user_message">Players cannot be the same</string>

    <string name="player1_key">player1</string>
    <string name="player2_key">player2</string>
    <string name="player1_position_key">player1_position</string>
    <string name="player2_position_key">player2_position</string>

    <!-- Menu -->
    <string name="change_theme">Change theme</string>
    <string name="show_leaderboard">Show leaderboard</string>

    <string name="main_menu_themes">Themes</string>
    <string name="default_theme">Default</string>
    <string name="dark_theme">Dark</string>
    <string name="fruit_theme">Fruit</string>
    <string name="cabin_theme">Cabin</string>

    <string name="menu_main_clear_users">Clear all users.</string>
    <string name="menu_main_admin">Admin options</string>

    <!-- Shared preferences -->
    <string name="theme_key">theme_key</string>
    <string name="theme_preference">theme_preference</string>

    <!-- Messages -->
    <string name="game_over_message">The game is over</string>

    <!-- Related to fragments -->
    <string name="fragment_state_key">fragment_state_key</string>
    <string name="fragment_state">start</string>


    <string name="AI_name">TTTBot</string>
    
</resources>
