...
                android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <Button
                android:text="@string/fragment_start_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_start_button_start"
                android:layout_marginBottom="164dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textSize="24sp"
...
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_start_text_player1"
                app:layout_constraintStart_toStartOf="parent"/>
        <Spinner
                android:id="@+id/fragment_start_spinner_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
...
