...
            tools:context=".gui.fragments.GameFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <GridView
                android:id="@+id/fragment_game_grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_game_text_player2"
                app:layout_constraintBottom_toTopOf="@id/fragment_game_text_player1"/>

        <TextView
...
